--- a/Polyline/polylinesac.netlify.app/css/style.css
+++ b/Polyline/polylinesac.netlify.app/css/style.css
@@ -1894,7 +1894,7 @@ body.dark-mode .card-details p {
 }
 
 .btn-details:hover {
-    background: #d37a2d;
+    background: #9d5a0e;
     transform: scale(1.1);
 }
 
@@ -2141,7 +2141,8 @@ body.dark-mode .modal-content {
 
 .carousel-track {
     display: flex;
-    transition: transform 0.3s ease;
+    overflow-x: auto;
+    scroll-behavior: smooth;
 }
 
 .carousel-item {
@@ -2153,6 +2154,12 @@ body.dark-mode .modal-content {
     border-radius: 5px;
     overflow: hidden;
     transition: border 0.3s ease;
+}
+
+.carousel-item.active {
+    border: 2px solid #007bff;
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    transition: all 0.3s;
 }
 
 .carousel-item img {
